CLM-24916 alp dashboard components reviewed should match review status (#13877)